envoy/ratelimit/local/basic.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 9901

static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                # access_log:
                #   - name: envoy.access_loggers.file
                #     typed_config:
                #       "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                #       log_format:
                #         text_format_source:
                #           inline_string: |
                #             [%START_TIME%] "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %RESPONSE_CODE_DETAILS% %CONNECTION_TERMINATION_DETAILS% "%UPSTREAM_TRANSPORT_FAILURE_REASON%" %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(X-REQUEST-ID)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%" %UPSTREAM_CLUSTER% %UPSTREAM_LOCAL_ADDRESS% %DOWNSTREAM_LOCAL_ADDRESS% %DOWNSTRE [...]
                #       path: /dev/stdout
                stat_prefix: ingress_http
                http_filters:
                  - name: envoy.filters.http.local_ratelimit
                    typed_config:
                      "@type": type.googleapis.com/udpa.type.v1.TypedStruct
                      type_url: type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                      value:
                        stat_prefix: http_local_rate_limiter
                  - name: envoy.filters.http.router
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          name: "rl-test"
                          route:
                            cluster: service_protected_by_rate_limit
                            rate_limits:
                              - actions:
                                  - header_value_match:
                                      #descriptor_key: path_match
                                      descriptor_value: "path_exits"
                                      expect_match: true
                                      headers:
                                        - name: :path
                                          present_match: true
                              - actions:
                                  # 获取请求方法： key=request_method value=GET
                                  - request_headers:
                                      header_name: ":method"
                                      descriptor_key: "request_method"
                              - actions: # any actions in here
                                  # - request_headers:
                                  #     header_name: ":path"
                                  #     descriptor_key: path
                                  # # descriptors 必须全匹配，加入此配置后，限流次数使用默认配置10次/min
                                  # - source_cluster: {}
                                  # - destination_cluster: {}
                                  # - remote_address: {}
                                  # 此处envoy实现有问题：任意一个action执行失败，会导致populateDescriptor返回失败
                                  - header_value_match:
                                      #descriptor_key: path_match
                                      descriptor_value: "svc1"
                                      expect_match: true
                                      headers:
                                        - name: :path
                                          prefix_match: /svc1
                              - actions:
                                  - header_value_match:
                                      descriptor_value: "svc2"
                                      expect_match: true
                                      headers:
                                        - name: :path
                                          string_match:
                                            prefix: /svc2
                                            ignore_case: true
                          typed_per_filter_config:
                            envoy.filters.http.local_ratelimit:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                              stat_prefix: test
                              token_bucket:
                                max_tokens: 10
                                tokens_per_fill: 10
                                fill_interval: 60s
                              filter_enabled:
                                runtime_key: test_enabled
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                              filter_enforced:
                                runtime_key: test_enforced
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                              response_headers_to_add:
                                - append: false
                                  header:
                                    key: x-test-rate-limit
                                    value: "true"
                              descriptors:
                                - entries:
                                    - key: header_match
                                      value: svc2
                                  token_bucket:
                                    max_tokens: 2
                                    tokens_per_fill: 2
                                    fill_interval: 60s
                                - entries:
                                    - key: header_match
                                      value: svc1
                                  token_bucket:
                                    max_tokens: 1
                                    tokens_per_fill: 1
                                    fill_interval: 60s
                        - match: { prefix: "/foo2" }
                          route: { cluster: default_service }

    - name: staticreply-8080
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: auto
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          direct_response:
                            status: 200
                            body:
                              inline_string: "example body\n"
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config: {}

    - name: staticreply-8081
      address:
        socket_address:
          address: 127.0.0.1
          port_value: 8081
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: auto
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          direct_response:
                            status: 200
                            body:
                              inline_string: "example body\n"
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config: {}

  clusters:
    - name: default_service
      load_assignment:
        cluster_name: default_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8080
    - name: service_protected_by_rate_limit
      load_assignment:
        cluster_name: service_protected_by_rate_limit
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8081
